test/tests/operators/serve_http/serve_http_error_on_backlog_invalid.txt
error: unsupported backlog policy: `invalid`
 --> tests/operators/serve_http/serve_http_error_on_backlog_invalid.tql:6:62
  |
6 | serve_http "127.0.0.1:31337", max_connections=16, on_backlog="invalid"
  |                                                              ^^^^^^^^^ 
  |
  = hint: `on_backlog` must be `"buffer"`, `"block"`, or `"drop"`
